--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "giphy-mixmax-app",
+  "name": "wanelo-mixmax-app",
   "version": "0.0.1",
-  "description": "Giphy App for Mixmax",
+  "description": "Wanelo App for Mixmax",
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/mixmaxhq/giphy-mixmax-app.git"
+    "url": "git://github.com/kigster/wanelo-mixmax-app.git"
   },
-  "author": "Chanpory Rith <chanpory@mixmax.com> (https://mixmax.com/)",
+  "author": "Konstantin Gredeskoul <kig@reinvent.one> (http://kig.re)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mixmaxhq/giphy-mixmax-app/issues"
+    "url": "https://github.com/kister/wanelo-mixmax-app/issues"
   },
-  "homepage": "https://github.com/mixmaxhq/giphy-mixmax-app",
+  "homepage": "https://github.com/kigster/wanelo-mixmax-app",
   "dependencies": {
     "body-parser": "^1.12.2",
     "cors": "^2.7.1",
@@ -25,6 +25,7 @@
     "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "nodemon": "^1.7.1"
+    "nodemon": "^1.7.1",
+    "mocha": "^2.4.5"
   }
 }
