--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "MixMax",
     "Wanelo"
   ],
+  "engines": {
+    "node": "5.9.0"
+  },
   "bugs": {
     "url": "https://github.com/kister/wanelo-mixmax-app/issues"
   },
@@ -26,13 +29,13 @@
     "cors": "^2.7.1",
     "request": "^2.64.0",
     "synchronize": "^0.9.14",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "sprintf-js": "^1.0.3",
+    "express": "^4.13.4",
+    "nodemon": "^1.7.1"
   },
   "devDependencies": {
-    "nodemon": "^1.7.1",
-    "sprintf-js": "^1.0.3",
     "chai": "^3.5.0",
-    "express": "^4.13.4",
     "mocha": "^2.4.5"
   }
 }
