--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   "homepage": "https://github.com/kigster/wanelo-mixmax-app",
   "dependencies": {
     "body-parser": "^1.12.2",
+    "synchronize": "^0.9.14",
+    "underscore": "^1.8.3",
     "cors": "^2.7.1",
     "request": "^2.64.0",
     "sprintf-js": "^1.0.3",
